--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,ts,tsx,vue}": [
-      "eslint --fix"
+      "eslint --fix",
+      "git add"
     ]
   }
 }
