--- a/package.json
+++ b/package.json
@@ -25,9 +25,6 @@
     "prettier": "^3.0.3"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,vue}": [
-      "eslint --fix",
-      "git add"
-    ]
+    "src/**/*.{js,jsx,ts,tsx,vue}": [ "eslint --fix" ]
   }
 }
