--- a/package.json
+++ b/package.json
@@ -25,6 +25,6 @@
     "prettier": "^3.0.3"
   },
   "lint-staged": {
-    "src/**/*.{js,jsx,ts,tsx,vue}": [ "npm run lint", "prettier --write" ]
+    "**/*.{js,jsx,ts,tsx,vue}": [ "npm run lint", "prettier --write" ]
   }
 }
